--- a/CW1_7SENG999C/Storyboards/Loans.storyboard
+++ b/CW1_7SENG999C/Storyboards/Loans.storyboard
@@ -96,25 +96,8 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fIP-Db-qJV">
-                                                <rect key="frame" x="0.0" y="195" width="430" height="15"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="15" id="FhA-xg-qMP"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Payment" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sZ2-Vm-LC1">
-                                                <rect key="frame" x="0.0" y="220" width="430" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="CUE-pO-rFP"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No. Payments Per Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8fK-dK-VH6">
-                                                <rect key="frame" x="0.0" y="260" width="430" height="15"/>
+                                                <rect key="frame" x="0.0" y="195" width="430" height="15"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="15" id="UAe-SH-ZYL"/>
                                                 </constraints>
@@ -123,7 +106,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="No. Payments Per Year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SYw-wN-4t0">
-                                                <rect key="frame" x="0.0" y="285" width="430" height="30"/>
+                                                <rect key="frame" x="0.0" y="220" width="430" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="B6d-kt-5Tf"/>
                                                 </constraints>
@@ -131,7 +114,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compounds Per Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bh8-vN-8sV">
-                                                <rect key="frame" x="0.0" y="325" width="430" height="15"/>
+                                                <rect key="frame" x="0.0" y="260" width="430" height="15"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="15" id="a3B-ms-Ycu"/>
                                                 </constraints>
@@ -140,13 +123,42 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Compounds Per Year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9gk-rN-xX9">
-                                                <rect key="frame" x="0.0" y="350" width="430" height="30"/>
+                                                <rect key="frame" x="0.0" y="285" width="430" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="nP8-ib-scp"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fIP-Db-qJV">
+                                                <rect key="frame" x="0.0" y="325" width="430" height="15"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="15" id="FhA-xg-qMP"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="aBe-aP-XjY">
+                                                <rect key="frame" x="0.0" y="350" width="430" height="30"/>
+                                                <subviews>
+                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="c3y-Mh-skq">
+                                                        <rect key="frame" x="0.0" y="0.0" width="55" height="31"/>
+                                                        <segments>
+                                                            <segment title="-"/>
+                                                            <segment title="+"/>
+                                                        </segments>
+                                                    </segmentedControl>
+                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Payment" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sZ2-Vm-LC1">
+                                                        <rect key="frame" x="65" y="0.0" width="365" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="30" id="CUE-pO-rFP"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment Made At" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VGj-ju-Mes">
                                                 <rect key="frame" x="0.0" y="390" width="430" height="15"/>
                                                 <constraints>
@@ -232,6 +244,8 @@
                         <outlet property="interestTxtField" destination="2HF-YC-2ee" id="fQm-I9-ZWe"/>
                         <outlet property="noPaymentPerYearTxtField" destination="SYw-wN-4t0" id="HPb-BA-tDJ"/>
                         <outlet property="paymentTxtField" destination="sZ2-Vm-LC1" id="Ivh-zN-s9M"/>
+                        <outlet property="plusMinusSelector" destination="c3y-Mh-skq" id="IAa-MQ-ir1"/>
+                        <outlet property="pmtStartEndSelector" destination="2pb-pu-R8c" id="lfA-po-heA"/>
                         <outlet property="presentTxtField" destination="J7b-t0-hkz" id="oqD-hh-P4e"/>
                     </connections>
                 </viewController>
